--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 version: "3.3"
+volumes:
+  shared-workspace:
+    name: "hadoop-distributed-file-system"
+    driver: local
 services:
   spark-master:
     image: cluster-apache-spark:3.2.0
@@ -6,8 +10,10 @@ services:
       - "9090:8080"
       - "7077:7077"
     volumes:
+       - shared-workspace:/opt/workspace
        - ./apps:/opt/spark-apps
        - ./data:/opt/spark-data
+       - ./notebooks:/opt/workspace/notebooks
     environment:
       - SPARK_LOCAL_IP=spark-master
       - SPARK_WORKLOAD=master
@@ -27,8 +33,10 @@ services:
       - SPARK_WORKLOAD=worker
       - SPARK_LOCAL_IP=spark-worker-a
     volumes:
-       - ./apps:/opt/spark-apps
-       - ./data:/opt/spark-data
+       - shared-workspace:/opt/workspace
+       - ./apps:/opt/workspace/spark-apps
+       - ./data:/opt/workspace/spark-data
+       - ./notebooks:/opt/workspace/notebooks
   spark-worker-b:
     image: cluster-apache-spark:3.2.0
     ports:
@@ -45,12 +53,14 @@ services:
       - SPARK_WORKLOAD=worker
       - SPARK_LOCAL_IP=spark-worker-b
     volumes:
+        - shared-workspace:/opt/workspace
         - ./apps:/opt/spark-apps
         - ./data:/opt/spark-data
+        - ./notebooks:/opt/workspace/notebooks
   demo-database:
     image: postgres:11.7-alpine
     ports: 
       - "5432:5432"
     environment: 
-      - POSTGRES_PASSWORD=secret1234
+      - POSTGRES_PASSWORD=secret!1234
 
